feat: extracting subclass parser into own file to be reusable by blocks, entites and the like

--- a/docs/README.adoc
+++ b/docs/README.adoc
@@ -1,3 +1,13 @@
 = dxf
+aichingert
+:toc:
+:toclevels: 3
 
-dxf parser
+early stages of a dfx parser
+
+== support
+
+* [ ] header ~
+* [ ] tables -
+* [ ] blocks -
+* [ ] entities ~
