feat: added blocks to drawing with map to their block name for easier indexing from inserts

--- a/docs/README.adoc
+++ b/docs/README.adoc
@@ -7,7 +7,7 @@ early stages of a dfx parser
 
 == support
 
-* [ ] header ~
-* [ ] tables -
-* [ ] blocks -
-* [ ] entities ~
+* [ ] header
+* [ ] tables
+* [+] blocks
+* [ ] entities
