feat(gxf): started new implementation

--- a/docs/README.adoc
+++ b/docs/README.adoc
@@ -30,8 +30,9 @@ github.com/aichingert/dxf/tree/main/examples/wasm[wasm example^]
 
 == support
 
+[%interactive]
 * [x] header
-* [~] tables
+* [ ] tables
 * [x] blocks
 * [ ] entities
 
